--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -7,7 +7,8 @@ version: 2
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
-  configuration: docs/conf.py
+  builder: html
+  configuration: docs/source/conf.py
 
 # Build documentation with MkDocs
 #mkdocs:
@@ -21,3 +22,4 @@ python:
   version: 3.7
   install:
     - requirements: docs/requirements.txt
+
